🌏👣 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8" />
 <title>what's next xoxo</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+<link rel="manifest" href="/manifest.json">
 <script src='events.json'></script>
 <script src='venues.json'></script>
 <script src='moment.min.js'></script>
