--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ document.addEventListener('DOMContentLoaded', () => {
 function renderEvents() {
   // Get events, ordered by date, with actual date values
   state.events = processEvents(rawEvents);
-  console.log(state.events);
+  //console.log(state.events);
 
   // Get next event
   let nextEvent = state.events[0];
@@ -152,6 +152,15 @@ function processEvents(events) {
           tmpEvent.venue.shortName = event.venue;
           tmpEvent.date = moment(day + ' ' + act.start, 'YYYY-MM-DD hA'),
           out.push(tmpEvent);
+          if (act.subevents) {
+            act.subevents.forEach(subevent => {
+              let tmpEvent = Object.assign({}, subevent);
+              tmpEvent.venue = venues[event.venue];
+              tmpEvent.venue.shortName = event.venue;
+              tmpEvent.date = moment(day + ' ' + subevent.start, 'YYYY-MM-DD hA'),
+              out.push(tmpEvent);
+            });
+          }
         });
       }
       else {
